fix formatting on mobile?

--- a/style.css
+++ b/style.css
@@ -82,7 +82,7 @@ body {
 
 #logo-page {
   background-color: var(--light);
-  position: absolute;
+  position: fixed;
   z-index: 1000;
 
   width: 80%;
@@ -123,10 +123,11 @@ body {
 
 #conversation-box {
   /* overflow-anchor: none; */
-  /* overflow-x: hidden; */
+  overflow-x: hidden;
   z-index: 20;
   background-color: var(--light);
   transition: 0.5s;
+
 }
 
 #conversation {
@@ -169,6 +170,9 @@ body {
   z-index: 999;
   bottom: 5%;
   width: 80%;
+  /* padding-left: 20px;
+  padding-right: 20px; */
+
 
   display: flex;
   flex-direction: column;
@@ -190,6 +194,10 @@ body {
   display: flex;
   flex-direction: column;
   align-items: center;
+}
+
+.search-bar-box-inner {
+  width: 80%;
 }
 
 .search-bar {
@@ -351,7 +359,7 @@ body {
   }
 
   #mobile-menu.active {
-    transform: translate(0, 20px);
+    transform: translate(0, 35px);
     z-index: 25;
   }
 
